[tool.poetry]
name = "pudzu"
version = "0.9.4"
description = "Various dataviz-oriented utilities"
packages = [{ include = "pudzu" }]
include = ["pudzu/sandbox/unicode/*.txt"]
keywords = ["pudzu", "visualization", "pillow", "unicode"]

authors = ["Uri Granta <uri.granta+python@gmail.com>"]
homepage = "https://github.com/Udzu/pudzu/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.7.1"
graphviz = "^0.13.2"
lxml = "^4.4.2"
pandas = "^1.4"
pyparsing = "^3.0"
requests = "^2.22.0"
pudzu-utils = "^0.9.3"
pudzu-dates = "^0.9.3"
pudzu-pillar = "^0.9.3"
pudzu-charts = "^0.9.3"
pudzu-patterns = "^0.9.3"

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
black = { version = "*", allow-prereleases = true }
isort = "*"
taskipy = "*"
pudzu-utils = { path = "../pudzu-packages/pudzu-utils", develop = true }
pudzu-dates = { path = "../pudzu-packages/pudzu-dates", develop = true }
pudzu-pillar = { path = "../pudzu-packages/pudzu-pillar", develop = true }
pudzu-charts = { path = "../pudzu-packages/pudzu-charts", develop = true }
pudzu-patterns = { path = "../pudzu-packages/pudzu-patterns", develop = true }
pytest = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-pylint = "*"

[tool.taskipy.tasks]
tests = "pytest --pylint --mypy --cov pudzu --cov-report html:htmlcov -W ignore::DeprecationWarning pudzu tests"
format = "task isort && task black"
mypy = "pytest --mypy -m mypy pudzu tests"
pylint = "pytest --pylint -m pylint pudzu tests"
pytest = "pytest pudzu tests"
black = "black pudzu tests"
isort = "isort pudzu tests"

[tool.black]
line-length = 160
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 160

[tool.pylint.MASTER]
init-hook = "import sys; sys.setrecursionlimit(2 * sys.getrecursionlimit())"

[tool.pylint.FORMAT]
max-line-length = 160

[tool.pylint.'MESSAGES CONTROL']
disable = "all"
enable = [
    "abstract-class-instantiated",
    "abstract-method",
    "access-member-before-definition",
    "anomalous-backslash-in-string",
    "anomalous-unicode-escape-in-string",
    "arguments-differ",
    "assert-on-tuple",
    "assign-to-new-keyword",
    "assigning-non-slot",
    "assignment-from-no-return",
    "assignment-from-none",
    "attribute-defined-outside-init",
    "bad-except-order",
    "bad-exception-context",
    "bad-format-character",
    "bad-format-string",
    "bad-format-string-key",
    "bad-indentation",
    "bad-mcs-classmethod-argument",
    "bad-mcs-method-argument",
    "bad-open-mode",
    "bad-option-value",
    "bad-reversed-sequence",
    "bad-staticmethod-argument",
    "bad-str-strip-call",
    "bad-super-call",
    "binary-op-exception",
    "blacklisted-name",
    "catching-non-exception",
    "cell-var-from-loop",
    "continue-in-finally",
    "dangerous-default-value",
    "differing-param-doc",
    "differing-type-doc",
    "duplicate-argument-name",
    "duplicate-bases",
    "duplicate-except",
    "duplicate-key",
    "empty-docstring",
    "expression-not-assigned",
    "fatal",
    "format-needs-mapping",
    "function-redefined",
    "global-at-module-level",
    "global-variable-not-assigned",
    "global-variable-undefined",
    "import-self",
    "inconsistent-mro",
    "inherit-non-class",
    "init-is-generator",
    "invalid-all-object",
    "invalid-format-index",
    "invalid-length-returned",
    "invalid-metaclass",
    "invalid-sequence-index",
    "invalid-slice-index",
    "invalid-slots",
    "invalid-slots-object",
    "invalid-star-assignment-target",
    "len-as-condition",
    "line-too-long",
    "literal-comparison",
    "logging-format-interpolation",
    "logging-format-truncated",
    "logging-not-lazy",
    "logging-too-few-args",
    "logging-too-many-args",
    "logging-unsupported-format",
    "lost-exception",
    "method-hidden",
    "misplaced-bare-raise",
    "misplaced-future",
    "missing-final-newline",
    "missing-format-argument-key",
    "missing-format-attribute",
    "missing-format-string-key",
    "missing-kwoa",
    "mixed-format-string",
    "mixed-indentation",
    "mixed-line-endings",
    "multiple-statements",
    "no-method-argument",
    "no-name-in-module",
    "no-self-argument",
    "no-value-for-parameter",
    "non-iterator-returned",
    "non-parent-init-called",
    "nonexistent-operator",
    "nonlocal-and-global",
    "nonlocal-without-binding",
    "not-a-mapping",
    "not-an-iterable",
    "not-async-context-manager",
    "not-callable",
    "not-in-loop",
    "notimplemented-raised",
    "pointless-statement",
    "pointless-string-statement",
    "raising-bad-type",
    "raising-non-exception",
    "redefine-in-handler",
    "redefined-argument-from-local",
    "redundant-keyword-arg",
    "redundant-unittest-assert",
    "reimported",
    "relative-beyond-top-level",
    "repeated-keyword",
    "return-in-init",
    "return-outside-function",
    "signature-differs",
    "single-string-used-for-slots",
    "singleton-comparison",
    "star-needs-assignment-target",
    "super-init-not-called",
    "syntax-error",
    "too-few-format-args",
    "too-many-format-args",
    "too-many-function-args",
    "too-many-star-expressions",
    "trailing-comma-tuple",
    "trailing-newlines",
    "trailing-whitespace",
    "truncated-format-string",
    "unable-to-import",
    "unbalanced-tuple-unpacking",
    "undefined-all-variable",
    "undefined-loop-variable",
    "undefined-variable",
    "unexpected-keyword-arg",
    "unexpected-special-method-signature",
    "unpacking-non-sequence",
    "unreachable",
    "unrecognized-inline-option",
    "unsupported-assignment-operation",
    "unsupported-binary-operation",
    "unsupported-delete-operation",
    "unsupported-membership-test",
    "unused-format-string-argument",
    "unused-import",
    "unused-variable",
    "used-before-assignment",
    "useless-else-on-loop",
    "useless-super-delegation",
    "using-constant-test",
    "yield-inside-async-function",
    "yield-outside-function"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
