[metadata]
name = pudzu
version = 0.9.2
description = Various dataviz-oriented utilities
long_description = Various utility functions, mostly geared towards dataviz and used to create the data visualisations at https://www.flickr.com/photos/zarfo/albums (most of which have been posted to reddit at some point by /u/Udzu).
keywords = pudzu, visualization, pillow
url = https://github.com/Udzu/pudzu/

author = Uri Granta
author_email = uri.granta+python@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = MIT

[options]
python_requires = >=3.6
install_requires =
    pudzu-utils
    pudzu-dates
    pudzu-pillar
    pudzu-charts
    beautifulsoup4
    lxml
