[metadata]
name = pudzu
version = 0.9.3
description = Various dataviz-oriented utilities
long_description = Various utility functions, mostly geared towards dataviz and used to create the data visualisations at https://www.flickr.com/photos/zarfo/albums (most of which have been posted to reddit at some point by /u/Udzu).
keywords = pudzu, visualization, pillow, unicode
url = https://github.com/Udzu/pudzu/

author = Uri Granta
author_email = uri.granta+python@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
license = MIT

[options]
python_requires = >=3.7
install_requires =
    pudzu-utils>=0.9.2
    pudzu-dates
    pudzu-pillar>=0.9.2
    pudzu-charts>=0.9.2
    beautifulsoup4
    lxml
    pandas
    graphviz
    pyparsing
    requests

[options.package_data]
pudzu.sandbox.unicode = *txt

[options.entry_points]
console_scripts =
    patterns = pudzu.sandbox.patterns:main

[tool:brunette]
line-length = 160

